--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           go-version: ^1.21.9
       - run: go install github.com/caddyserver/xcaddy/cmd/xcaddy@latest
-      - run: GOOS=${{ matrix.target_os }} GOARCH=${{ matrix.target_arch }} ~/go/bin/xcaddy build --with github.com/caddyserver/forwardproxy@master=$PWD
+      - run: GOOS=${{ matrix.target_os }} GOARCH=${{ matrix.target_arch }} ~/go/bin/xcaddy build master --with github.com/caddyserver/forwardproxy@master=$PWD
       - name: Pack naiveproxy assets
         run: |
           mkdir ${{ env.BUNDLE }}
